downgrade java version 17 to 11